--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -6,18 +6,17 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5171"
+      "applicationUrl": "http://localhost:5173"
     },
-    "https": {
-      "commandName": "Project",
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
       "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_HTTP_PORTS": "8080"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7122;http://localhost:5171"
+      "publishAllPorts": true,
+      "useSSL": false
     }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json"
+  }
 }
