--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Winedge;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=mssql;Database=Winedge;User=sa;Password=Winedge@123;TrustServerCertificate=True;"
   },
   "Fiware": {
     "BaseUrl": "http://ec2-98-95-40-70.compute-1.amazonaws.com",
